Fixed line-spacing issue with Rules

--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -2,4 +2,6 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+    height: calc(6 * (5vw + 10px));
+    margin: 1% 0% 5% 0%;;
 }
