--- a/src/css/EndGame.css
+++ b/src/css/EndGame.css
@@ -5,8 +5,7 @@
     border-radius: 10px;
     position: absolute;
     top: 5%;
-    /* left: 0%; */
-    transform: translateX(50%);
-    /* text-align: center; */
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1;
 }
