--- a/src/css/Rules.css
+++ b/src/css/Rules.css
@@ -8,5 +8,4 @@
 .rules-container .guess-background {
     width: fit-content;
     margin: 1% 0%;
-    line-height: 1.5em;
 }
